[gd_scene load_steps=6 format=3 uid="uid://cxkd82ywng57p"]

[ext_resource type="Script" path="res://scripts/health_item_script.gd" id="1_ev8wo"]
[ext_resource type="Texture2D" uid="uid://bjs8ai0p0lnhc" path="res://assets/images/items/health_item.png" id="2_bbmc5"]
[ext_resource type="AudioStream" uid="uid://jsw3p0mim2ro" path="res://assets/audio/sfx/50-CC0-retro-synth-SFX/retro_coin_02.ogg" id="3_e3y6w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kl4gu"]
radius = 28.0179

[sub_resource type="CircleShape2D" id="CircleShape2D_prljw"]
radius = 99.2472

[node name="HealthItem" type="Area2D"]
script = ExtResource("1_ev8wo")
health_restore_amount = 20

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_bbmc5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kl4gu")

[node name="AttractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttractArea"]
shape = SubResource("CircleShape2D_prljw")

[node name="PickupSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_e3y6w")
volume_db = 5.0
bus = &"sfx"

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true
